# my-right-hand-app

./: .gitignore  LICENSE  docker-compose.yml  pyproject.toml
app/: Dockerfile  Home.py  main.py  pyproject.toml
app/models/: EmailModels.py
app/pages/: 10_Emails.py  20_Budget.py
app/pages/budget/: render.py  utils.py
app/pages/components/: email_funcs.py
app/pages/components/budget/: exceptions.py  render.py  utils.py
app/pages/email/: render.py  utils.py
app/utils/: __init__.py  initalization.py
db/: Dockerfile  init_v0.sql
